fixed overflow

--- a/index.css
+++ b/index.css
@@ -96,7 +96,7 @@ header{
 @media screen and (max-width: 600px){
     body{
         margin: 5px;
-        overflow: hidden !important;
+        overflow-x: hidden !important;
         padding-left: 5px;
         padding-right: 5px;
         font-size: small;
